[POST][Closed issue #2] Ganhando visibilidade com schema.org

--- a/site/styles/blog.css
+++ b/site/styles/blog.css
@@ -24,7 +24,8 @@ body {
 /* Diversos
 ---------------------------------------- */
 
-.bold {
+.bold,
+strong {
 	font-weight: bold;
 	color: #333;
 }
